support vivante FB API

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,12 @@ elseif (_GLFW_OSMESA)
                      posix_time.h posix_thread.h osmesa_context.h)
     set(glfw_SOURCES ${common_SOURCES} null_init.c null_monitor.c null_window.c
                      null_joystick.c posix_time.c posix_thread.c osmesa_context.c)
+elseif (_GLFW_VIVANTE)
+    set(glfw_HEADERS ${common_HEADERS} vivante_platform.h xkb_unicode.h linux_joystick.h
+                     posix_time.h posix_thread.h egl_context.h evdev.h)
+    set(glfw_SOURCES ${common_SOURCES} vivante_init.c null_monitor.c vivante_window.c
+                     xkb_unicode.c linux_joystick.c posix_time.c posix_thread.c
+                     egl_context.c evdev.c)
 endif()
 
 if (_GLFW_X11 OR _GLFW_WAYLAND)
@@ -79,6 +85,11 @@ if (_GLFW_X11 OR _GLFW_WAYLAND)
         set(glfw_HEADERS ${glfw_HEADERS} null_joystick.h)
         set(glfw_SOURCES ${glfw_SOURCES} null_joystick.c)
     endif()
+endif()
+
+if (_GLFW_VIVANTE)
+    set_source_files_properties(${glfw_SOURCES} PROPERTIES
+        COMPILE_DEFINITIONS EGL_API_FB=1)
 endif()
 
 # Workaround for CMake not knowing about .m files before version 3.16
